--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -8,6 +8,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  .avatar {
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+}
 }
 
 /* Logo */
@@ -37,32 +42,33 @@
 
 /* Navbar link */
 .navbar-wagon-link {
-  color: #616668;
+  color: $red;
   font-size: 14px;
-}
-.navbar-wagon-link:hover {
-  color: #da552f;
+  &:hover {
+  color: $orange;
   text-decoration: none;
+  }
 }
 
 /* Dropdown menu */
 .navbar-wagon-dropdown-menu {
   margin-top: 15px;
-  box-shadow: 1px 1px 4px #E6E6E6;
-  border-color: #E6E6E6;
+  box-shadow: 1px 1px 4px $red;
+  border-color: $red;
 }
 .navbar-wagon-dropdown-menu li > a {
   transition: color 0.3s ease;
   font-weight: lighter !important;
-  color: #999999 !important;
+  color: $yellow !important;
   font-size: 15px !important;
   line-height: 22px !important;
   padding: 10px 20px;
-}
-.navbar-wagon-dropdown-menu li > a:hover {
+  &:hover {
   background: transparent !important;
-  color: black !important;
+  color: $red !important;
+  }
 }
+
 .navbar-wagon-dropdown-menu:before {
   content: ' ';
   height: 10px;
@@ -70,8 +76,8 @@
   position: absolute;
   right: 10px;
   top: -6px;
-  background-color: white;
+  background-color: $red;
   transform: rotate(45deg);
-  border-left: 1px solid #E6E6E6;
-  border-top: 1px solid #E6E6E6;
+  border-left: 1px solid $orange;
+  border-top: 1px solid $orange;
 }
