--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -1,10 +1,10 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #EE5F5B;
-$blue: #469AE0;
-$yellow: #FDB631;
-$orange: #E67E22;
-$green: #32B796;
+$red: #1A2634;
+$blue: #1A2634;
+$yellow: #203E5F;
+$orange: #FFCC00;
+$green: #FFF69A;
 $gray: #000000;
 $light-gray: #F4F4F4;
